--- a/test.tex
+++ b/test.tex
@@ -2,7 +2,17 @@
 
 \usepackage{konabe}
 \begin{document}
+
 \begin{eqnarray}
 \Normal{x}{\mu}{\sigma}
 \end{eqnarray}
+
+\begin{eqnarray}
+\argmin_{x} x^2 = 0
+\end{eqnarray}
+
+\begin{eqnarray}
+\argmax_{x} -x^2 = 0
+\end{eqnarray}
+
 \end{document}
