--- a/konabe.sty
+++ b/konabe.sty
@@ -15,3 +15,15 @@
 % arg系
 \newcommand{\argmax}{\mathop{\rm argmax}\limits}
 \newcommand{\argmin}{\mathop{\rm argmin}\limits}
+
+% ニーモニック
+\newcommand{\lone}{$L_1$}
+\newcommand{\ltwo}{$L_2$}
+
+% 関数名
+\newcommand{\wmedian}[2]{
+	{\rm wmedian}(\textbf{#1}, \textbf{#2})
+}
+\newcommand{\sign}[1]{
+	{\rm sign}(#1)
+}
