--- a/test.tex
+++ b/test.tex
@@ -15,4 +15,12 @@
 \argmax_{x} -x^2 = 0
 \end{eqnarray}
 
+\lone norm and \ltwo norm are similar  but different.
+Then, $\wmedian{w}{x}$ is complicately defined.
+
+\begin{equation}
+\sign{-0.0001} = -1 
+\end{equation}
+
+
 \end{document}
